Updated UserController and UserService to properly implement login and register